--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "antd": "^4.6.5",
     "axios": "^0.20.0",
     "firebase": "^7.21.0",
+    "html-react-parser": "^0.14.0",
     "mdbootstrap": "^4.19.1",
+    "moment": "^2.28.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
