--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "firebase": "^7.21.0",
     "html-react-parser": "^0.14.0",
     "mdbootstrap": "^4.19.1",
-    "moment": "^2.28.0",
+    "moment": "^2.29.0",
+    "moment-timezone": "^0.5.31",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-moment": "^0.9.7",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
