--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "path-to-regexp": "^1.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
