--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "antd": "^4.6.5",
     "axios": "^0.20.0",
     "firebase": "^7.21.0",
+    "firebase-tools": "^8.11.2",
     "html-react-parser": "^0.14.0",
     "mdbootstrap": "^4.19.1",
     "moment": "^2.29.0",
     "moment-timezone": "^0.5.31",
     "node-sass": "^4.14.1",
+    "path-to-regexp": "^1.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
@@ -23,14 +25,14 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "path-to-regexp": "^1.7.0"
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-prod": "webpack -p"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.12"
   }
 }
